2.20 refatoracao dos dtos, testes com sucesso